# xjtu-sy-bearing

./: .env.example  .gitignore  Dockerfile.vertex  LICENSE  PRD-ONSET.md  README.md  app.py  cloudbuild.yaml  progress-onset.txt  pyproject.toml
.github/workflows/: ci.yml
app/: __init__.py  data.py  plots.py
configs/: benchmark_dta_mlp.yaml  benchmark_mdsct.yaml  benchmark_tcn_transformer_lstm.yaml  cnn1d_baseline.yaml  cnn2d.yaml  fulllife_cnn1d.yaml  fulllife_cnn2d.yaml  fulllife_feature_lstm.yaml  onset_labels.yaml  pattern2_cnn2d.yaml  tcn_transformer.yaml  training_default.yaml  twostage_cnn1d.yaml  twostage_cnn2d_bottleneck.yaml  twostage_feature_lstm.yaml  twostage_lgbm.yaml  twostage_lgbm_fulllife.yaml  twostage_lgbm_temporal.yaml  twostage_pipeline.yaml
docs/: experiment_tracking.md  feature_lstm_guide.md
frontend/: .gitignore  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.svelte  main.ts  plotly.d.ts
frontend/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
frontend/src-tauri/capabilities/: default.json
frontend/src-tauri/src/: lib.rs  main.rs  models.rs
frontend/src-tauri/src/commands/: audio.rs  health.rs  mod.rs  scalogram.rs
frontend/src-tauri/src/data/: csv_loader.rs  mod.rs  npy_loader.rs  wav_loader.rs  yaml_loader.rs
frontend/src-tauri/tests/: data_loaders.rs
frontend/src/lib/: api.ts  constants.ts  types.ts
notebooks/: 00_scratchpad.ipynb  01_eda.ipynb  02_eda_statistical.ipynb  02_eda_statistical_executed.ipynb  03_eda_frequency.ipynb  04_eda_interactive.ipynb  04_experiment_comparison.ipynb  05_audio_analysis.ipynb  20_model_baseline.ipynb  21_model_1d_cnn.ipynb  22_model_fusion.ipynb  23_model_hybrid.ipynb  24_model_uncertainty.ipynb  30_evaluation.ipynb  30_evaluation_executed.ipynb  40_onset_analysis.ipynb  41_twostage_evaluation.ipynb
scripts/: 01_upload_to_gcs_with_hive_partitioning.py  02_preprocessing.py  03_extract_features.py  03b_enrich_temporal_features.py  04_generate_spectrograms.py  05_create_audio.py  05_train_dl_models.py  06_evaluate_dl_models.py  06_generate_onset_labels.py  07_create_audio.py  07_train_onset_classifier.py  08_generate_onset_labels.py  09_train_onset_classifier.py  10_train_lgbm.py  11_train_feature_lstm.py  12_run_benchmark.py  13_sync_vertex_to_mlflow.py  mlflow_server.sh  submit_vertex_jobs.py  upload_features_to_gcs.py
src/: __init__.py
src/data/: __init__.py  augmentation.py  dataset.py  dataset_builders.py  datasets.py  feature_windows.py  loader.py  rul_labels.py  windowing.py
src/features/: __init__.py  cwt.py  envelope.py  frequency_domain.py  fusion.py  stft.py  temporal.py  time_domain.py
src/models/: __init__.py  registry.py
src/onset/: __init__.py  dataset.py  detectors.py  health_indicators.py  labels.py  models.py  pipeline.py  visualization.py
src/training/: __init__.py  config.py  cv.py  metrics.py
src/utils/: __init__.py  audio.py  tracking.py
tests/: __init__.py  conftest.py  test_audio_generation.py  test_cv_protocols.py  test_data_loading.py  test_dta_mlp.py  test_feature_extraction.py  test_mdsct.py  test_model_training.py  test_temporal_features.py  test_tracking.py  test_twostage_rul.py
tests/integration/: __init__.py  test_twostage_pipeline.py
tests/onset/: __init__.py  test_dataset.py  test_detectors.py  test_health_indicators.py  test_labels.py  test_models.py  test_pipeline.py  test_twostage_metrics.py  test_visualization.py
(+32 files in other folders)
