[project]
name = "xjtu-sy-bearing"
version = "0.1.0"
description = "MLOps pipeline for bearing Remaining Useful Life (RUL) prediction using the XJTU-SY vibration dataset"
readme = "README.md"
license = "MIT"
authors = [
    {name = "Tobias Hoffmann", email = "thoffmann-ml@proton.me"},
]
requires-python = ">=3.11"
dependencies = [
    "db-dtypes>=1.4.4",
    "dotenv>=0.9.9",
    "google-cloud-aiplatform>=1.40.0",
    "google-cloud-bigquery>=3.40.0",
    "google-cloud-storage>=3.8.0",
    "gradio>=5.0.0",
    "graphviz>=0.21",
    "ipywidgets>=8.1.8",
    "jupyterlab>=4.5.1",
    "keras>=3.13.1",
    "lightgbm>=4.0.0",
    "mlflow[mcp]>=3.5.1",
    "numpy>=1.26.0,<2.4",
    "pandas>=2.0.0,<3.0.0",
    "plotly>=6.5.2",
    "pydot>=4.0.1",
    "pywavelets>=1.4.0",
    "scipy>=1.17.0",
    "seaborn>=0.13.2",
    "shap>=0.47.0",
    "tensorflow>=2.20.0",
    "tensorflow-probability>=0.24.0",
    "tf-keras>=2.20.1",
]

[project.urls]
Homepage = "https://github.com/thfmn/xjtu-sy-bearing"
Repository = "https://github.com/thfmn/xjtu-sy-bearing"
Issues = "https://github.com/thfmn/xjtu-sy-bearing/issues"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::UserWarning",
]
