[package]
name = "xjtu-sy-bearing-explorer"
version = "0.1.0"
description = "XJTU-SY Bearing Health Explorer — Tauri v2 Desktop App"
authors = ["Tobias Hoffmann <thoffmann-ml@proton.me>"]
license = "MIT"
edition = "2021"

[lib]
name = "xjtu_sy_bearing_explorer_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
csv = "1.3"
ndarray = "0.16"
ndarray-npy = "0.9"
hound = "3.5"
base64 = "0.22"
log = "0.4"
env_logger = "0.11"
